--- a/app/views/technologies/show.html.erb
+++ b/app/views/technologies/show.html.erb
@@ -21,9 +21,9 @@
 <% end %>
 
 <% @tutorials.each do |tutorial| %>
-  <% if tutorial.up_voted?(current_user) %>
+  <% if user_signed_in? && tutorial.up_voted?(current_user) %>
     <div class="list-box up-vote" id="<%= tutorial.id %>">
-  <% elsif tutorial.down_voted?(current_user) %>
+  <% elsif user_signed_in? && tutorial.down_voted?(current_user) %>
     <div class="list-box down-vote" id="<%= tutorial.id %>">
   <% else %>
     <div class="list-box" id="<%= tutorial.id %>">
@@ -34,53 +34,55 @@
       <div class="bar" style="width: <%= tutorial.percent_rating %>%;"></div>
     </div>
     
-    <%# Tutorial link, submitter and up/down vote buttons %>
-    <div class="list-box-text">
-                
-      <div class="tutorial-wrapper" id="<%= tutorial.id %>">
+    <%# Tutorial link, submitter and up/down vote buttons %>                
+    <table>
+      <tr>
+        <td class="vote-cell">
 
-        <div class="vote-wrapper">
-          <% if user_signed_in? && tutorial.up_voted?(current_user) %>
-            <span class="voted">+</span>
-          <% else %>
-            <%= link_to "+", { :action => "create", :controller => "votes", :tutorial => tutorial.id, :vote => 1 }, :class => "up-vote-button", :method => :post %> 
-          <% end %>
-
-          <% if user_signed_in? && tutorial.down_voted?(current_user) %>
-            <span class="voted">-</span>
-          <% else %>
-            <%= link_to "-", { :action => "create", :controller => "votes", :tutorial => tutorial.id, :vote => 0 }, :class => "down-vote-button", :method => :post %>
-          <% end %>
-        </div> 
-        
-        <div class="tutorial-info-wrapper">
-          <h3 class="tutorial-name">
-            <%= link_to tutorial.name, tutorial.link %>
-            <span class="tutorial-link"><%= tutorial.link.split('/')[2] %></span>
-          </h3>
-                
-          <p class="tutorial-info">
-            Submitted by 
-            <span class="tutorial-info-item"><%= link_to tutorial.user.username, tutorial.user %> <%= time_ago_in_words tutorial.created_at %> ago</span>
-            <span class="tutorial-info-item">-</span>
-            <% if user_signed_in? && tutorial.is_reported_by?(current_user)  %>
-              <span class="tutorial-info-item"><%= link_to "Unreport", unreport_path(:reported_object => tutorial.id, :report_category => "Tutorial") %></span>
+          <span class="vote-wrapper">
+            <% if user_signed_in? && tutorial.up_voted?(current_user) %>
+              <span class="voted">+</span>
             <% else %>
-              <span class="tutorial-info-item"><%= link_to "Report", { :action => "new", :controller => "reports", :reported_object => tutorial.id, :report_category => "Tutorial" } %></span>
+              <%= link_to "+", { :action => "create", :controller => "votes", :tutorial => tutorial.id, :vote => 1 }, :class => "up-vote-button", :method => :post %> 
             <% end %>
-            <span class="tutorial-info-item">-</span>
-            <span class="tutorial-info-item"><%= "#{tutorial.total_votes} #{tutorial.total_votes == 1 ? "vote" : "votes"}" %></span>
-            <span class="tutorial-info-item">-</span>
-            <span class="tutorial-info-item"><%= link_to "#{tutorial.comments.size} #{tutorial.comments.size == 1 ? "comment" : "comments"}", tutorial %></span>
-          </p>
-        
-        </div>
 
-        <div class="clear"></div>
+            <% if user_signed_in? && tutorial.down_voted?(current_user) %>
+              <span class="voted">-</span>
+            <% else %>
+              <%= link_to "-", { :action => "create", :controller => "votes", :tutorial => tutorial.id, :vote => 0 }, :class => "down-vote-button", :method => :post %>
+            <% end %>
+          </span> 
 
-      </div>
+        </td>
 
-    </div>
+        <td>
+      
+          <div class="tutorial-info-wrapper">
+            <h3 class="tutorial-name">
+              <%= link_to tutorial.name, tutorial.link %>
+              <span class="tutorial-link"><%= tutorial.link.split('/')[2] %></span>
+            </h3>
+                  
+            <p class="tutorial-info">
+              Submitted by 
+              <span class="tutorial-info-item"><%= link_to tutorial.user.username, tutorial.user %> <%= time_ago_in_words tutorial.created_at %> ago</span>
+              <span class="tutorial-info-item">-</span>
+              <% if user_signed_in? && tutorial.is_reported_by?(current_user)  %>
+                <span class="tutorial-info-item"><%= link_to "Unreport", unreport_path(:reported_object => tutorial.id, :report_category => "Tutorial") %></span>
+              <% else %>
+                <span class="tutorial-info-item"><%= link_to "Report", { :action => "new", :controller => "reports", :reported_object => tutorial.id, :report_category => "Tutorial" } %></span>
+              <% end %>
+              <span class="tutorial-info-item">-</span>
+              <span class="tutorial-info-item"><%= "#{tutorial.total_votes} #{tutorial.total_votes == 1 ? "vote" : "votes"}" %></span>
+              <span class="tutorial-info-item">-</span>
+              <span class="tutorial-info-item"><%= link_to "#{tutorial.comments.size} #{tutorial.comments.size == 1 ? "comment" : "comments"}", tutorial %></span>
+            </p>
+          
+          </div>
+
+        </td>
+      </tr>
+    </table>
     
   </div>
   
