--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,10 @@
-<h3 class="sub-heading">The best technology tutorials, decided by you.</h3>
-<p class="home-paragraph">
-  tuutorials orders technology tutorials by their user rating to make finding
-  the best tutorials easy.
-</p>
+<div id="intro">  
+  <h3 class="sub-heading">The best technology tutorials, decided by you.</h3>
+  <p class="home-paragraph">
+    tuutorials orders technology tutorials by their user rating to make finding
+    the best tutorials easy.
+  </p>
+</div>
 
 <h2 id="technologies-heading">Technologies</h2>
 
