--- a/app/views/technologies/show.html.erb
+++ b/app/views/technologies/show.html.erb
@@ -2,7 +2,7 @@
 
 <%# Technology name %>
 <h2 class="main-heading">
-  <%= @technology.name %>
+  <%= @technology.name %> Tutorials
 </h2>
 <div class="clear"></div>
 
@@ -83,7 +83,7 @@
         </td>
       </tr>
     </table>
-    
+
   </div>
   
 <% end %>
