--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -7,15 +7,15 @@
 }
 
 h2#technologies-heading {
-  font-size: 80px;
-  line-height: 80px;
+  font-size: 60px;
+  line-height: 60px;
   margin: 60px 0 20px 0;
   text-align: center;
 }
 
 h3.letter {
   font-size: 60px;
-  padding: 60px 0;
+  padding: 40px 0;
   text-align: center;
 }
 
@@ -25,11 +25,13 @@ div#nav-container {
 }
 
 li.technology-item {
-  background: #EEE;
-  box-shadow: 0 0 15px #777;
+  background-color: #EEE;
+  -webkit-box-shadow: 0 0 10px #777;
+     -moz-box-shadow: 0 0 10px #777;
+          box-shadow: 0 0 10px #777;
   display: block;
   font-size: 40px;
-  line-height: 140px;
+  line-height: 100px;
   list-style: none;
   margin: 20px 0;
   overflow: hidden;
