--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,7 +50,7 @@ div.clear {
 
 div#content {
   text-shadow: 0 1px #ffffff;
-  padding: 60px 0;
+  padding: 0 0 60px 0;
   margin: 0 auto;
 }
 
@@ -96,7 +96,7 @@ div.form-actions.input {
   padding-top: 0;
 }
 
-h1 a:hover{
+h1 a:hover {
   color: #EEE;
   text-decoration: none;
 }
@@ -111,9 +111,9 @@ h1 a:hover{
 
 div#header {
   background-color: #262626;
-  -webkit-box-shadow: 0 3px 3px #999;
+  /*-webkit-box-shadow: 0 3px 3px #999;
      -moz-box-shadow: 0 3px 3px #999;
-          box-shadow: 0 3px 3px #999; 
+          box-shadow: 0 3px 3px #999; */
   /*background-image: url('px_by_Gre3g.png');*/
   padding: 40px 10%;
   z-index: 100;
@@ -165,7 +165,7 @@ h1 a {
 h2.main-heading {
   font-size: 60px;
   line-height: 60px;
-  margin: 10px 0;
+  margin: 60px 0 10px 0;
   white-space: nowrap;
 }
 
