--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,13 +6,6 @@
   width: 100%;
 }
 
-h2#technologies-heading {
-  font-size: 60px;
-  line-height: 60px;
-  margin: 60px 0 20px 0;
-  text-align: center;
-}
-
 h3.letter {
   font-size: 60px;
   padding: 40px 0;
@@ -20,8 +13,17 @@ h3.letter {
 }
 
 div#nav-container {
+  background-image: url('dust.png');
   border-bottom: 3px solid #CCC;
-  padding: 0 0 20px 0;
+  padding: 20px 10%;
+  position: relative;
+  margin: 0 0%;
+  width: 80%;
+  z-index: 100;
+}
+
+div#nav-container-padding {
+  height: 70px;
 }
 
 li.technology-item {
@@ -41,10 +43,11 @@ li.technology-item {
 }
 
 li.nav-item {
+  cursor: pointer;
   display: inline-block;
-  font-size: 40px;
+  font-size: 30px;
   list-style: none;
-  margin: 15px 10px;
+  margin: 0.75%;
 }
 
 li.nav-item:hover {
@@ -61,6 +64,6 @@ ul#technology-list {
 }
 
 ul#nav-list {
-  margin: 10px 0;
   text-align: center;
+  margin: 0;
 }
