--- a/app/assets/stylesheets/technology.css.scss
+++ b/app/assets/stylesheets/technology.css.scss
@@ -50,6 +50,13 @@ span.vote-wrapper {
   width: 10%;
 }
 
+h2.technology-name {
+  font-size: 60px;
+  line-height: 60px;
+  margin: 60px 0 0 0;
+  white-space: nowrap;
+}
+
 h3.tutorial-name {
   font-size: 30px;
   line-height: 40px;
