--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,6 +35,7 @@ a.add {
 html, body {
   height: 100%;
   min-height: 100%;
+  background-image: url('dust.png');
 }
 
 body {
@@ -164,6 +165,7 @@ h1 a {
 }
 
 h2.main-heading {
+
   font-size: 60px;
   line-height: 60px;
   margin: 60px 0 10px 0;
