--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,13 @@
 <html>
 
   <head>
-    <title>tuutorials.</title>
+
+    <% if @title.nil? %>
+      <title>tuutorials.</title>
+    <% else %>
+      <title><%= @title %> - tuutorials.</title>
+    <% end %>
+
     <%= stylesheet_link_tag "reset" %>
     <%= stylesheet_link_tag "bootstrap" %>
     <%= stylesheet_link_tag "application", :media => "all" %>
