--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,13 @@
   src: local("CreteRound-Regular"), url("/assets/CreteRound-Regular.otf") format("truetype"); /* For non-IE */
 }
 
+.technologies-button {
+  display: inline-block;
+  font-size: 25px;
+  line-height: 25px;
+  margin: 30px 0 0 20px;
+}
+
 a {
   text-decoration: none;
 }
@@ -152,7 +159,7 @@ h2, h3, h4 {
   color: #888;
 }
 
-h1 {
+h1#tuutorials {
   color: #333;
   float: left;
   font-size: 60px;
@@ -185,7 +192,7 @@ label.control-label {
   margin-right: 20px;
 }
 
-p {
+p, li {
   font-size: 20px;
   line-height: 30px;
 }
