--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h2 id="add">Register</h2>
+<h2 id="add">Sign up</h2>
 
 <%= form_tag({:controller => :tutorials, :action => "create"}, :method => "post", :class => "form-horizontal") do %>
   <div class="control-group">
