added rel nofollows to tutorial pages

--- a/app/views/tutorials/show.html.erb
+++ b/app/views/tutorials/show.html.erb
@@ -1,5 +1,5 @@
 <h2 class="main-heading">
-  <%= link_to @tutorial.name, @tutorial.link %>
+  <%= link_to @tutorial.name, @tutorial.link, :rel => "nofollow" %>
 </h2>
 
 <div class="clear"></div>
