--- a/app/views/technologies/show.html.erb
+++ b/app/views/technologies/show.html.erb
@@ -59,7 +59,7 @@
       
           <div class="tutorial-info-wrapper">
             <h3 class="tutorial-name">
-              <%= link_to tutorial.name, tutorial.link %>
+              <%= link_to tutorial.name, tutorial.link, :rel => "nofollow" %>
               <span class="tutorial-link"><%= tutorial.link.split('/')[2] %></span>
             </h3>
                   
